# gnorasi

./: .directory  .hgignore  CREDITS.txt  Changelog.txt  README
Applications/: fires.sh  floods.sh
Copyright/: CodeCopyright.txt  GnorasiCopyright.txt  VoreenCopyright.txt
GUI/: CREDITS.txt  Changelog.txt  LICENSE-academic.txt  LICENSE.txt  README  commonconf.pri  config-default.txt  config.txt  pch.h  qmake-default.bat  qmake-python.bat  qmake-xcode.sh  readme.txt  voreen.pro
GUI/apps/: pch_qtapp.h  voreenapp.pri
GUI/apps/simple/: simple-glut.cpp  simple-glut.pro  simple-qt.cpp  simple-qt.pro
GUI/apps/voltool/: commands_convert.cpp  commands_convert.h  commands_create.cpp  commands_create.h  commands_grad.cpp  commands_grad.h  commands_modify.cpp  commands_modify.h  commands_registration.cpp  commands_registration.h  voltool.cpp  voltool.pro
GUI/apps/voreenve/: main.cpp  settingsdialog.cpp  settingsdialog.h  startupscreen.cpp  startupscreen.h  templateworkspacefetcher.cpp  templateworkspacefetcher.h  tutorialvideofetcher.cpp  tutorialvideofetcher.h  voreenmainwindow.cpp  voreenmainwindow.h  voreenmoduleve.cpp  voreenmoduleve.h  voreenve.pro  voreenveapplication.cpp  voreenveapplication.h  voreenveplugin.cpp  voreenveplugin.h  voreenvisualization.cpp  voreenvisualization.h
GUI/data/mapping/: mappings.xml
GUI/data/transferfuncs/: heart.tfi
GUI/data/workspaces/: demo_18-10-2012.vws
GUI/ext/tgt/: assert.cpp  assert.h  bounds.cpp  bounds.h  bspline.cpp  bspline.h  camera.cpp  camera.h  catmullromspline.cpp  catmullromspline.h  curve.cpp  curve.h  exception.cpp  exception.h  filesystem.cpp  filesystem.h  font.cpp  font.h  framebufferobject.cpp  framebufferobject.h  framecounter.h  frustum.cpp  frustum.h  glcanvas.cpp  glcanvas.h  glmath.h  gpucapabilities.cpp  gpucapabilities.h  gpucapabilitieswindows.cpp  gpucapabilitieswindows.h  guiapplication.h  init.cpp  init.h  light.cpp  light.h  line.h  logmanager.cpp  logmanager.h  manager.h  material.h  (+42 more)
GUI/ext/tinyxml/: tinyxml.h
GUI/modules/: default.pri  gen_moduleregistration.h  gen_moduleregistration_qt.h  gen_moduleregistration_ve.h  moduleregistration.h  moduleregistration_qt.h
GUI/modules/base/: base_common.pri  base_core.pri  base_qt.pri  basemodule.cpp  basemodule.h  basemodule.xml  basemoduledefine.h  basemoduleqt.cpp  basemoduleqt.h  deploymentlist.txt
GUI/modules/dcmtk/: README.txt  dcmtk_app.pri  dcmtk_common.pri  (+6 more)
Gnorasi/: BUILD_HELP.txt  CMakeLists.txt  Gnorasi-LICENSE.txt  config-default.cmake
Gnorasi/cmake/: FindOSGeo4WVRN.cmake  FindQWTVRN.cmake  FindQwtVRN.cmake  commonconf.cmake
Gnorasi/data/: voreensettings.xml  voreenve-log.html
Gnorasi/doc/: BUILD_HELP_EL.txt  KNOWN_ISSUES.txt
Gnorasi/modules/: modulelist.cmake  modules - Shortcut.lnk
Knowledge/Joseki-3.4.4/: Joseki-server-start.bat  build.xml  joseki-config.ttl
KnowledgeWebService/: .classpath  .project  build.xml  log4j.properties  logback.xml
KnowledgeWebService/conf/: gnorasi.ttl  indexingSail.properties  mappings_v2.xml  service.properties
KnowledgeWebService/ontology/: demo_gnorasi_v4.owl  demo_gnorasi_v5.owl
Presentations/gnorasi-introduction/: index.html
Presentations/gnorasi-meeting2/: index.html
Utilities/: AdaptiveHistogramEqualization.cxx  BinaryClosing.cxx  BinaryDilate.cxx  BinaryErode.cxx  BinaryOpening.cxx  BinaryThreshold.cxx  CMakeLists.txt  CannyEdgeDetection.cxx  FilteringWithConvolution.cxx  GradientAnisotropicDiffusion.cxx  ImageDifference.cxx  KMeansImageClassification.cxx  KMeansImageClassificationExample.cxx  KullbackLeiblerDistanceChangeDetection.cxx  LSD.sh  LineSegmentDetector.cxx  LocalCorrelationChangeDetection.cxx  MeanDifferenceChangeDetection.cxx  MeanShiftSegmentation.cxx  NDVI.cxx  NDWI.cxx  OneImageBandMath.cxx  RatioChangeDetection.cxx  SimpleViewer.cxx  TwoImagesBandMath.cxx  WatershedSegmentation.cxx  fires.sh  urban_green.sh
Utilities/opensuse/: VRE30_opensuse_OBS.patch  gnorasi.changes  gnorasi.desktop  gnorasi.rpmlintrc  gnorasi.spec
Utilities/opensuse/livecd/: create_appliance.sh
Utilities/opensuse/livecd/source/: bootsplash.tar  config.sh  config.xml  kdm4.tar
Utilities/opensuse/livecd/source/root/etc/: HOSTNAME
Utilities/opensuse/livecd/source/root/etc/init.d/: boot.local  suse_studio_firstboot
Utilities/opensuse/livecd/source/root/etc/sysconfig/: clock  displaymanager  keyboard  language  windowmanager
Utilities/opensuse/livecd/source/root/etc/sysconfig/network/: config  ifcfg-eth0
Utilities/opensuse/livecd/source/root/etc/zypp/repos.d/: Application_Geo_12.1.repo  Games_-_openSUSE_12.1.repo  devel_languages_python_12.1.repo  devel_tools_scm_openSUSE_12.1.repo  education_12.1.repo  home_tzotsos_12.1.repo  home_tzotsos_Application_Geo.repo  home_tzotsos_python_12.1.repo  openSUSE_12.1_OSS.repo  openSUSE_12.1_Updates.repo
Utilities/opensuse/livecd/source/root/studio/: configure_kde4_background.sh  configure_kdm4_theme.sh  manifesto.xml  studio_rpm_key_1  studio_rpm_key_10  studio_rpm_key_11  studio_rpm_key_2  studio_rpm_key_3  studio_rpm_key_4  studio_rpm_key_5  studio_rpm_key_6  studio_rpm_key_7  studio_rpm_key_8  studio_rpm_key_9
(+2246 files in other folders)
